# transformer-smaller-training-vocab

./: .dockerignore  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  conftest.py  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: add-tokenizer-support.md  bug-report.md
.github/workflows/: ci.yml  publish-docs.yml
0.2.4/: .buildinfo  genindex.html  getting-started.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.2.4/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree
0.2.4/.doctrees/api/: transformer_smaller_training_vocab.doctree
0.2.4/api/: transformer_smaller_training_vocab.html
0.3.0/: .buildinfo  genindex.html  getting-started.html  index.html  modules.html  objects.inv  py-modindex.html  search.html
0.3.0/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree
0.3.0/.doctrees/api/: transformer_smaller_training_vocab.doctree
0.3.0/_sources/: getting-started.md.txt  index.rst.txt
0.3.0/_sources/api/: transformer_smaller_training_vocab.rst.txt
0.3.0/api/: transformer_smaller_training_vocab.html
0.3.1/: .buildinfo  genindex.html  getting-started.html  index.html  modules.html  py-modindex.html  search.html
0.3.1/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree
0.3.1/.doctrees/api/: transformer_smaller_training_vocab.doctree
0.3.1/api/: transformer_smaller_training_vocab.html
0.3.2/: .buildinfo  genindex.html  getting-started.html  index.html  modules.html  objects.inv  py-modindex.html  search.html
0.3.2/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree
0.3.2/.doctrees/api/: transformer_smaller_training_vocab.doctree
0.3.2/api/: transformer_smaller_training_vocab.html
0.3.3/: .buildinfo  genindex.html  getting-started.html  index.html  modules.html  py-modindex.html  search.html
0.3.3/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree
0.3.3/.doctrees/api/: transformer_smaller_training_vocab.doctree
0.3.3/api/: transformer_smaller_training_vocab.html
assets/: redirect.html
docs/: conf.py
main/: .buildinfo  genindex.html  getting-started.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  getting-started.doctree  index.doctree  modules.doctree
main/.doctrees/api/: transformer_smaller_training_vocab.doctree
main/_sources/: getting-started.md.txt  modules.rst.txt
main/api/: transformer_smaller_training_vocab.html
python_template/: __init__.py  cli.py
tests/: test_contextual_reduce.py  test_dataset_utils.py  test_gather_vocab.py  test_hello_world.py  test_set_tokenizer_vocab.py
transformer_smaller_training_vocab/: __init__.py  contextual_reduce.py  logging_utils.py  modify_model.py  modify_tokenizer.py  token_stats.py  utils.py
transformer_smaller_training_vocab/transformer_set_vocab/: __init__.py  auto_set_vocab.py  set_vocab_bert.py  set_vocab_fast_tokenizer.py  set_vocab_roberta.py  set_vocab_xlm_roberta.py
