[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Python template with opinionated setup of my personal preferences."
authors = ["Benedikt Fuchs <benedikt.fuchs.staw@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "python_template" }]
repository = "https://github.com/helpmefindaname/python-template"

[tool.poetry.scripts]
python_template = "python_template.cli:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mypy = "^0.10.3"
black = "^22.12.0"
ruff = "^0.0.205"
pytest-github-actions-annotate-failures = "^0.1.8"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py310']


[tool.ruff]
line-length = 120
target-version = 'py310'

[tool.pytest.ini_options]
addopts = "--mypy -n auto"
filterwarnings = [
    "error",
    "ignore:SelectableGroups dict interface is deprecated. Use select."
]  # Convert all warnings to errors, imo warnings that are not treated as errors will be ignored by most people.
# My approach is to throw an error and let the programmar check if the error is intended (then add it to the filterwarnings) or not (then fix it!)



[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
warn_unused_ignores = true
warn_no_return = true
